k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lead-scoring
  labels:
    name: lead-scoring
